panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_pointer.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_pointer.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_pointer.c"
   (tentative-definition external x~0 `ptr<int>` ∅)
   (tentative-definition external y~1 `ptr<int>` ∅)
   (tentative-definition external a~2 `ptr<int const>` ∅)
   (tentative-definition external b~3 `ptr<int> const` ∅)
   (tentative-definition external c~4 `ptr<int const> const` ∅)
   (tentative-definition external d~5 `ptr<int const>` ∅)
   (tentative-definition external e~6 `ptr<int const> const` ∅)
   (tentative-definition external f~7 `ptr<ptr<int>>` ∅)
   (tentative-definition external g~8 `ptr<ptr<int const>>` ∅)
   (tentative-definition external h~9 `ptr<ptr<int>> const` ∅)
   (tentative-definition external i~10 `ptr<ptr<int> const>` ∅))

----- stderr -----
