panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_tentative_definitions_with_declaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_tentative_definitions_with_declaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (tentative-definition value~0 `Int` ∅)
   (definition value~0 `Int` (42 `Int`))
   (tentative-definition value~0 `Int` ∅))

----- stderr -----
